# prop-esp32-logger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ESPConfig.json  ESPConfig_Template.json  Protocol_Walkthrough.md  README.md  esp_config.json  esp_mapping.json  flashAllAndReset.bat  sdkconfig  sdkconfig.defaults  writeAndReset.bat
components/ADS112C04/: ADS112C04.c  ADS112C04.h  CMakeLists.txt
components/ESPConfig/: CMakeLists.txt  ESPConfigConvert.py
components/ESPConvert/: CMakeLists.txt  ESPConfigConvert.py
components/ads112c04/: CMakeLists.txt  ads112c04.c  ads112c04.h  ads112c04_defines.h  ads112c04_internal.c  ads112c04_internal.h
components/config_json/: CMakeLists.txt  esp_config_generate.py
components/control/: CMakeLists.txt  control.c  control.h
components/esp_config/: CMakeLists.txt  esp_config_generate.py
components/qlcp_lib/: CMakeLists.txt  qlcp_lib.c  qlcp_lib.h
components/qret_protocol/: CMakeLists.txt  qret_protocol.c  qret_protocol.h
components/qwcp_lib/: CMakeLists.txt  qwcp_lib.c  qwcp_lib.h
components/sensors/: CMakeLists.txt  current_sensor.c  current_sensor.h  load_cell.c  load_cell.h  pressure_transducer.c  pressure_transducer.h  resistance_sensor.c  resistance_sensor.h  sensor.c  sensor.h  thermocouple.c  thermocouple.h
configs/: ESPConfig-GSE.json  ESPConfig.json  PandaV1_2-PTMap.txt
configs/PandaV1/: ESPConfig.json
configs/PandaV3/: ESPConfig.json
main/: CMakeLists.txt  Kconfig.projbuild  main.c  sensor_stream.c  sensor_stream.h  setup.c  setup.h  ssdp_tools.c  ssdp_tools.h  tcp_tools.c  tcp_tools.h  wifi_tools.c  wifi_tools.h
main/wifi/: network_manager.c  ssdp_tools.c  tcp_tools.c  udp_tools.c  wifi_tools.c  wifi_tools.h
src/: ADS112C04.py  Control.py  SSDPTools.py  TCPTools.py  boot.py  commands.py  main.py  protocol.py  setup.py  wifi_tools.py
src/sensors/: Current.py  LoadCell.py  PressureTransducer.py  Resistance.py  Sensor.py  Thermistor.py  Thermocouple.py
